tests/extended/invalid/float-init.cl
class Main {
  x : Float;
  main() : Float {
      x <- 2147483648.0;
  };
};
